2001-06-15  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi: Move AC_FUNC_WAIT3 and
	AC_SYS_RESTARTABLE_SYSCALLS to the obsolete section,
	and explain why and how to replace them.
	* acfunctions.m4 (AC_FUNC_WAIT3): Warn as obsolete.
	* acspecific.m4 (AC_SYS_RESTARTABLE_SYSCALLS): Likewise.

2001-06-15  Akim Demaille  <akim@epita.fr>

	`build_alias' and so on are not AC_SUBST'd.
	Reported by Bruno Haible.

	* acgeneral.m4 (AC_ARG_VAR): Move the AC_SUBST, from here...
	 (_AC_ARG_VAR_PRECIOUS): to here.

2001-06-15  Pavel Roskin  <proski@gnu.org>

	* acheaders.m4 (_AC_CHECK_HEADER_DIRENT): Instead of defining
	an unused pointer use cast to this type and `if' statement to
	avoid warnings from the compiler.
	(AC_HEADER_TIME): Likewise.
	* actypes.m4 (AC_CHECK_MEMBER): s/foo/ac_aggr/. Use the member
	in `if' statement to avoid warnings from the compiler. Declare
	ac_aggr static to avoid the need to initialize it.

2001-06-14  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Portable Shell): Move after `Writing Macros'.

2001-06-13  Akim Demaille  <akim@epita.fr>

	* m4/missing.m4, config/missing: Updated to Automake 1.4g's.
	Suggested by Alexander Mai.

2001-06-13  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INCLUDES_DEFAULT_REQUIREMENTS): Guard
	sys/types.h and sys/stat.h, and check for them.

2001-06-13  Akim Demaille  <akim@epita.fr>

	* acheaders.m4 (AC_CHECK_HEADER, AC_CHECK_HEADERS): Support $4 =
	INCLUDES.

2001-06-12  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* acspecific.m4 (AC_PATH_XTRA): Check if linking against libX11
	succeeds and only try adding libdnet upon a failure.

2001-06-12  Akim Demaille  <akim@epita.fr>

	* autoscan.in (&output_kind): Output the comment only if it exists.
	(%kind_comment): Add entry for `programs'.
	(&output_programs): Use &output_kind.
	(&output_functions, &output_identifiers, &output_headers)
	(&output_programs): Inline, and remove.

2001-06-12  Akim Demaille  <akim@epita.fr>
